# project_15

./: CMakeLists.txt  main.c
libs/algorithms/: algorithm.c  algorithm.h
libs/algorithms/array/: array.c  array.h
libs/data_structures/bitset/: bitset.c  bitset.h
libs/data_structures/matrix/: CMakeLists.txt  matrix.c  matrix.h
libs/data_structures/ordered_array_set/: ordered_set.c  ordered_set.h
libs/data_structures/string/: string.c  string.h  string_.c  string_.h
libs/data_structures/unordered_array_set/: unordered_set.c  unordered_set.h
libs/data_structures/vector/: vector.c  vector.h
libs/data_structures/vector_void/: vector_void.c  vector_void.h
task_exam/: task.c
